--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -249,5 +249,6 @@ a.article_content a {
     height: 260px;
     margin-left: auto;
     margin-right: auto;
-    float: center;
+    align-items: center;
+
 }
