--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -48,10 +48,10 @@ header img {
 
 .headings h1 {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-    color: white;
+    color: black;
     text-transform: uppercase;
-	font-size: 1.9rem;
-	margin: 0 0 0 17px;
+    font-size: 1.9rem;
+    margin: 0 0 0 17px;
 }
 
 .m {
