--- a/lesson7/css/large.css
+++ b/lesson7/css/large.css
@@ -6,9 +6,14 @@ header {
 
 }
 
+.gallery_box {
+    margin-left: 50px;
+    text-align: left;
+}
+
 header img {
   width: 80%;
-	}
+}
 
 .headings h1 {
   font-size: 2.3rem;
@@ -16,7 +21,7 @@ header img {
 
 .m {
   font-size: 1rem;
-  margin-left: 15px;
+  margin-left: 12px;
 }
 
 h2 {
@@ -92,4 +97,12 @@ footer, main {
     margin-left: 200px ;
 }
 
+.gallery {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .gallery img:hover {
+      box-shadow: 0 0 20px rgb(141, 141, 141);
+
+}
 }
