--- a/lesson7/css/small.css
+++ b/lesson7/css/small.css
@@ -292,7 +292,7 @@ img {
 
   .gallery img {
     box-sizing: border-box;
-    box-shadow: rgba(0, 0, 0, 0.15) 0px;
+    box-shadow: -4px 0px 15px 1px rgba(76,76,76,0.4);
     width: 100%;
   }
   
