--- a/lesson9/css/large.css
+++ b/lesson9/css/large.css
@@ -84,8 +84,8 @@ footer, main {
 }
 
 .map {
-    width: 300px;
-    height: 260px;
+    width: 200px;
+    height: 160px;
     margin-left: auto;
     margin-right: auto;
     float: left;
@@ -105,4 +105,13 @@ footer, main {
       box-shadow: 0 0 20px rgb(141, 141, 141);
 
 }
+
+.cards {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .cards section {
+    display: block;
+    width: 325px;
+  }
 }
