--- a/lesson9/css/medium.css
+++ b/lesson9/css/medium.css
@@ -1,4 +1,19 @@
-@media all and (min-width: 480px) and (max-width: 768px){  
+@media all and (min-width: 480px) and (max-width: 768px){
+
+
+    .cards section {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+      }
+    
+      .cards section:nth-child(odd) img {
+        grid-column: 1;
+      }
+    
+      .cards section:nth-child(odd) #details {
+        grid-column: 2;
+        grid-row: 1;
+      }
 
     h2 {
         font-size: 26px;
