--- a/scoots/css/large.css
+++ b/scoots/css/large.css
@@ -8,42 +8,8 @@
         padding: 25px;
     }
 
-    footer {
-        width: 100%;
-
-        font-size: .75rem;
-      }
-      footer a {
-        color: #ffffff;
-      }
-      footer h2 {
-        font-size: 1rem;
-      }
-
-
-
-    .card ul {
-        font-family: "Laila";
-        font-size: 18px;
-        text-align: center;
-        color: #ffffff;
-      }
-      .forecast {
-        font-size: .5em;
-      }
-      .forecast ul {
-        color: #000000;
-      }
-
-    h2.hero-text{
-        font-size: 64px;
-    }
-    h2{
-        font-size: 32px;
-    }
-
     .hero-image {
-        background-image: url("/assets/explore.jpg");
+        background-image: url("/img/explore.jpg");
         height: 450px;
         background-position: bottom;
         background-repeat: no-repeat;
@@ -57,104 +23,99 @@
         margin-top: 10vh;
       
   }
-    
-    #rental-container {
-        margin-top: 2em;
-        margin-bottom: 5em;
-    }  
-
-    .rental-container {
-        margin-top: 3.5em;
-      }
-      .rental-option-text li {
-        line-height: 1.5rem;
-        text-align: left;
-        padding-right: 15em;
-      }
-      .rental-summary {
-        clear: both;
-        max-width: 35%;
-      }
-      .rental-summary h2 {
-        text-align: center;
-      }
-      .rental-summary .rental-data {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
-      }
-      .rental-summary img {
-        display: block;
-        width: 50%;
-        padding: 1em;
-        -webkit-transition: 1s;
-        transition: 1s;
-      }
-      .rental-summary p {
-        display: block;
-        width: 80%;
-        text-align: center;
-      }
-      }
-      .rental-sub {
-        font-size: 1em;
-        font-weight: 700;
-      }
-
-      .flex-column .button {
-        -ms-flex-item-align: center;
-            -ms-grid-row-align: center;
-            align-self: center;
-        font-size: 1.25em;
-      }
-    nav ul {
-        display: flex;
-    }
-    
-    .navigation {
-        max-width: 1060px;
-        display: flex;
-        margin: 0 auto;
-    }
-    
-    .navigation li {
-        display: block;
-        flex: auto 1 1;
-    }
-    
-    nav a {
-        font-size: 1rem;
-    }
-    
-    nav ul li a:visited {
-        color: rgb(209, 207, 207);
-    }
-    
-    .navigation li:first-child {
-        display: none;
-    }
 
 
-    
+  /* For Gallery */
+  img[data-src] {
+    filter: blur(0.5em);
+    -webkit-filter: blur(0.5em);
+}
+  
+img {
+    filter: blur(0em);
+    transition: filter 0.5s;
+    -webkit-transition: filter 1.5s;
+    -moz-transition: filter 1.5s;
+    -ms-transition: filter 1.5s;
+    -o-transition: filter 1.5s;
+    -webkit-filter: blur(0em);
+}
 
-      main {
-        grid-template-columns: 1fr 1fr 1fr;
-     }
+.gallery {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 
- /* Contact */
- #main_contact h1 {
+  .gallery img:hover {
+      box-shadow: 0 0 20px rgb(141, 141, 141);
+
+}
+
+
+
+  .navigation {
+    max-width: 1060px;
+    display: flex;
+    margin: 0 auto;
+}
+
+.navigation li {
+    display: block;
+    flex: auto 1 1;
+}
+
+nav a {
+    font-size: 1rem;
+}
+
+nav ul li a:visited {
+    color: rgb(209, 207, 207);
+}
+
+.navigation li:first-child {
+    display: none;
+}
+
+main{
+    margin-bottom: 4em;
+}
+
+#rentals h3 {
+    text-align: center;
+    padding-bottom: 3em;
+}
+
+   /* Rentals */
+#main_rentals h2 {
+    grid-column: 1/4;
+ }
+
+
+
+#rentals .rental_image {
+    margin-bottom: 2em;
+}
+ #rentals {
+    margin-left: 10em;
+    margin-right: 10em;
     grid-column: 1 / 4;
+    gap: 45px;
+    grid-template-columns: 1fr 1fr 1fr;
  }
- #contact_intro {
-    grid-column: 2 / 4;
- }
- #send_message_div {
-    grid-column: 2/4;
- }
+ #rental_conditions {
+    grid-column: 1/4;
+ }   
 
- /* Reservations */
- #agreement {
+
+#alerts {
+    font-size: 3em;
+}
+/* Reservations */
+
+#main_reservations {
+    margin-left: 10em;
+    margin-right: 10em;
+}
+   #agreement {
     grid-column: 1/4;
  }   
  #btnChart {
@@ -169,13 +130,7 @@
     grid-column: 1/4;
     margin-bottom: 20px;
   }
-  #main_contact {
 
-    width: 1076px;
-    margin-left: 2em;
-    margin-right: 2em;
-
-  }
-
-    
 }
+
+
