--- a/scoots/css/main.css
+++ b/scoots/css/main.css
@@ -8,6 +8,9 @@
   }
 
   div#alerts {
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+
     font-size: 32px;
     color: white;
     font-weight: bolder;
