--- a/scoots/css/large.css
+++ b/scoots/css/large.css
@@ -35,6 +35,7 @@
   
 
 
+
  
   /* For Gallery */
   img[data-src], img[data-embed] {
@@ -137,13 +138,24 @@ main{
  #complete_reservation_div {
     grid-column: 1/4;
  }
- #chart {
-    grid-column: 1/4;
-    margin-bottom: 20px;
+
+ /* form begins */
+ #main_reservation main {
+     margin-left: 12em;
+     margin-right: 12em;
+ };
+
+
+ .agreement {
+    text-align: center;
   }
-
-
-  
+  .rental-option-text li {
+    color: #000000;
+  }
+  .rental-sub {
+    font-size: 1em;
+    font-weight: 700;
+  }
 }
 
 
