--- a/scoots/css/main.css
+++ b/scoots/css/main.css
@@ -251,7 +251,7 @@ li {
 /* Homepage */
 
 .hero-image {
-    background-image: url("img/explore.jpg");
+    background-image: url("./explore.jpg");
     height: 280px;
     background-position: bottom;
     background-repeat: no-repeat;
