--- a/scoots/css/main.css
+++ b/scoots/css/main.css
@@ -31,6 +31,11 @@
       color: rgb(41, 40, 40);
   }
 
+h1 {
+	color: black;
+	font-size: 32px;
+}
+
   .weatherInfo {
     text-align: center;
     flex-wrap: wrap;
