--- a/scoots/css/main.css
+++ b/scoots/css/main.css
@@ -114,7 +114,7 @@ footer {
 
 .footer ul {
 	list-style: none;
-	color: #fff;
+	color: black;
 	font-size: 15px;
 	letter-spacing: 0.5px;	
  }
@@ -122,7 +122,7 @@ footer {
 .footer ul a {
 	text-decoration: none;
 	outline: none;
-	color: #fff;
+	color: black;
 	transition: 0.3s;
 }
 
@@ -256,7 +256,8 @@ li {
 /* Homepage */
 
 .hero-image {
-    background-image: url("./explore.jpg");
+    background-image: url("img/explore.jpg");
+    background-color: yellow;
     height: 280px;
     background-position: bottom;
     background-repeat: no-repeat;
