--- a/scoots/css/main.css
+++ b/scoots/css/main.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,400;0,600;0,700;1,100;1,300;1,400&display=swap');
 
-
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+  }
+
+  h1 {
+    color: black;
+    font-size: 32px;
   }
 
   div#alerts {
@@ -30,11 +34,6 @@
       font-family: "Jost", serif;
       color: rgb(41, 40, 40);
   }
-
-h1 {
-	color: black;
-	font-size: 32px;
-}
 
   .weatherInfo {
     text-align: center;
@@ -114,7 +113,7 @@ footer {
 
 .footer ul {
 	list-style: none;
-	color: black;
+	color: #fff;
 	font-size: 15px;
 	letter-spacing: 0.5px;	
  }
@@ -122,7 +121,7 @@ footer {
 .footer ul a {
 	text-decoration: none;
 	outline: none;
-	color: black;
+	color: #fff;
 	transition: 0.3s;
 }
 
@@ -256,8 +255,7 @@ li {
 /* Homepage */
 
 .hero-image {
-    background-image: url("img/explore.jpg");
-    background-color: yellow;
+    background-image: url("/img/explore.jpg");
     height: 280px;
     background-position: bottom;
     background-repeat: no-repeat;
@@ -319,22 +317,21 @@ h2.hero-text {
 /* Still homepage but now gallery */
 
 
-.gallery {
-
+.gallery, .tour {
     display: grid;
     grid-template-columns: 1fr;
     gap: 55px;
   }
   
-  .gallery figure {
+  .gallery figure, .tours figure {
     margin: 0;
     padding: 0;
   }
-
-  .gallery img {
+  .gallery img, .tour img {
     box-sizing: border-box;
     width: 100%;
   }
+
   
   .gallery figcaption {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.054);
@@ -346,6 +343,14 @@ h2.hero-text {
     text-align: center;
   }
 
+  .tours figcaption {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.054);
+    padding-bottom: 10px;
+    background-color: #a33327;
+    font-size: 1em;
+    padding-top: 15px;
+    text-align: left;
+  }
 
 
 /* BEGIN Weather three-day forecast */
@@ -603,3 +608,16 @@ form .submit:hover {
   margin-left: auto;
   margin-right: auto;
 }
+
+ /* Tours */
+
+ #main_tours {
+  margin-left: 2em;
+  margin-right: 2em;;
+  grid-template-columns: 1fr;
+}
+#main_tours picture img {
+  padding: 2em;
+  width: 100%;
+}  
+
